RESOLVED FIXED249974
[IFC][line-clamp] Incorrect ellipsis placement when text-align is not "start"
https://bugs.webkit.org/show_bug.cgi?id=249974
Summary [IFC][line-clamp] Incorrect ellipsis placement when text-align is not "start"
Michael Nutt
Reported 2022-12-31 14:06:11 PST
Created attachment 464272 [details] screenshot of line clamp issue When using -webkit-line-clamp and text-align: center, in certain cases the ellipses are drawn incorrectly aligned. Reproduction: https://codepen.io/michaelnutt/pen/gOjrEre (see attachment for screenshot of the above on my local build) From some debugging, I notice that the ellipsis is drawn in the spot where it would be if the text were text-align: left. I'm not very familiar with the text layout code so this may be incorrect, but it seems as if it is not taking into account the offset created by text-align.
Attachments
screenshot of line clamp issue (12.54 KB, image/png)
2022-12-31 14:06 PST, Michael Nutt
no flags
ellipsis-align-possible-fix (1.25 KB, patch)
2022-12-31 14:12 PST, Michael Nutt
no flags
Patch (3.60 KB, patch)
2023-01-04 09:49 PST, alan
no flags
Patch (3.60 KB, patch)
2023-01-04 11:59 PST, alan
no flags
[fast-cq]Patch (3.60 KB, patch)
2023-01-05 08:13 PST, alan
no flags
Michael Nutt
Comment 1 2022-12-31 14:12:19 PST
Created attachment 464273 [details] ellipsis-align-possible-fix This patch appears to correct the issue for me, although I'm not sure if it's the correct fix or not.
Radar WebKit Bug Importer
Comment 2 2022-12-31 14:15:06 PST
alan
Comment 3 2023-01-04 09:49:06 PST
alan
Comment 4 2023-01-04 11:59:30 PST
alan
Comment 5 2023-01-05 08:13:10 PST
Created attachment 464350 [details] [fast-cq]Patch
EWS
Comment 6 2023-01-05 10:41:39 PST
Committed 258491@main (c672a5df57fc): <https://commits.webkit.org/258491@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 464350 [details].
Note You need to log in before you can comment on or make changes to this bug.