[IFC][line-clamp] Incorrect ellipsis placement when text-align is not "start" https://bugs.webkit.org/show_bug.cgi?id=249974

Reviewed by Antti Koivisto.

Do not assume that the truncated content is the result of overflowing where
the root inline box always starts at 0.
Move the ellipsis position by the alignment offset (this is specific to line clamping).

* LayoutTests/fast/inline/line-clamp-with-text-align-expected.html: Added.
* LayoutTests/fast/inline/line-clamp-with-text-align.html: Added.
* Source/WebCore/layout/formattingContexts/inline/display/InlineDisplayLineBuilder.cpp:
(WebCore::Layout::InlineDisplayLineBuilder::trailingEllipsisRect const):

Canonical link: https://commits.webkit.org/258491@main